feat: document api. (#39)
* Rest api with json data- initial checkin.

* Rest api with json data - initial checkin.

* Rest api with json data - initial checkin.

* Test fixes due path handling changes.
(using relative path on input side)

* Documentstructure api implementation draft, log4j removal from the tests, helm chart fixes.

* JDK16 upgrade.
Target still 11, changes reuired to compile and test under jdk16+.

* JDK16 upgrade fix.

* Gitignore fix.

* Rest api initial - template repository.

* feat: Template respository maintenance initial.

* fix: test loglevel.

* fix: CI log level for sample tests.

* doc: Javadoc added (incomplete).

* doc: Javadoc added (incomplete).

* doc: Javadoc added (incomplete).

* doc: Javadoc added.

* doc: Javadoc added.

* fix: api ops, jsonpath handling in expressions.

* fix: api operation refactor.

* fix: api operation refactor.

* doc: License change to Apache 2.0 (#38)

* doc: license port to maven-licenses plugin.

* refactor!: transaction handling for async gen.

* feat: getDocumentStructures.

* doc: Javadoc fixes.

* fix: e2e template tests.

* fix: api coverage.

Co-authored-by: Levente Ban <levente.ban@merckgroup.com>